--- a/vko3/vko3kerta2/vko3kerta2.csproj
+++ b/vko3/vko3kerta2/vko3kerta2.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F8DC2FE8-2A38-44D1-88C7-F3940B753F1E}</ProjectGuid>
+    <ProjectGuid>{55E87471-BE3C-4001-85ED-8E69F1499573}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>vko3kerta1</RootNamespace>
-    <AssemblyName>vko3kerta1</AssemblyName>
+    <RootNamespace>vko3kerta2</RootNamespace>
+    <AssemblyName>vko3kerta2</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,14 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Kiuas.cs" />
-    <Compile Include="Opiskelija.cs" />
-    <Compile Include="Pesukone.cs" />
+    <Compile Include="Elevator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TV.cs" />
-    <Compile Include="Valtiot.cs" />
-    <Compile Include="Vehicle.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
