--- a/vko3/vko3kerta2/vko3kerta2.csproj
+++ b/vko3/vko3kerta2/vko3kerta2.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Amplifier.cs" />
     <Compile Include="Elevator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
